--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,24 @@
 [metadata]
-description-file=README.md
-license_files=LICENSE.rst
+name = chiss
+version = 0.0.10
+author = Jachou
+author_email = matisse.martayan@gmail.com
+description = Le package des rats
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/Jachou-yt/chissProject
+project_urls =
+    Bug Tracker = https://github.com/Jachou-yt/chissProject/issues
+classifiers =
+    Programming Language :: Python :: 3
+    License :: OSI Approved :: MIT License
+    Operating System :: OS Independent
+
+[options]
+package_dir =
+    = src
+packages = find:
+python_requires = >=3.6
+
+[options.packages.find]
+where = src
