Chiss s'enrichit a été ajouter !

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,13 @@
 [metadata]
 name = chiss
-version = 1.0.0
+version = 1.0.1
 author = Jachou
 author_email = matisse.martayan@gmail.com
 description = Le package des rats
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/Jachou-yt/chissProject
+install_requires = []
 project_urls =
     Bug Tracker = https://github.com/Jachou-yt/chissProject/issues
 classifiers =
